--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -64,7 +64,7 @@
       [matTooltip]="getTooltip('starts')"
       matTooltipPosition="above"
     >
-      starts
+      Starts
     </th>
     <td
       mat-cell
@@ -79,11 +79,11 @@
     <th
       mat-header-cell
       *matHeaderCellDef
-      mat-sort-header="gsae"
+      mat-sort-header="shootout"
       [matTooltip]="getTooltip('shootout')"
       matTooltipPosition="above"
     >
-      shootout
+      Shootout
     </th>
     <td
       mat-cell
@@ -121,7 +121,7 @@
       [matTooltip]="getTooltip('ev')"
       matTooltipPosition="above"
     >
-      ev
+      EV
     </th>
     <td
       mat-cell
