--- a/src/app/leaderboard/teams/teams.component.html
+++ b/src/app/leaderboard/teams/teams.component.html
@@ -25,12 +25,12 @@
       </a>
     </td>
   </ng-container>
-  <ng-container matColumnDef="season">
+  <!-- <ng-container matColumnDef="season">
     <th mat-header-cell *matHeaderCellDef class="column-header">Season</th>
     <td mat-cell *matCellDef="let team" class="small-column">
       {{ hyphenate(team.season) }}
     </td>
-  </ng-container>
+  </ng-container> -->
   <ng-container matColumnDef="gamesPlayed">
     <th
       mat-header-cell
@@ -275,7 +275,7 @@
   <tr
     mat-row
     *matRowDef="let team; columns: displayedColumns"
-    [routerLink]="['/', team.teamId, 'year']"
+    [routerLink]="['/teams/', team.teamId]"
   ></tr>
 </table>
 
