--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -103,6 +103,7 @@
                   [routerLink]="['/leaderboard/skaters']"
                 >
                   Skaters
+                  <img src="/assets/skater.png" class="logo" />
                 </li>
                 <li
                   class="dropdown-item"
@@ -110,6 +111,7 @@
                   [routerLink]="['/leaderboard/goalies']"
                 >
                   Goalies
+                  <img src="/assets/mask.png" class="logo" />
                 </li>
                 <li
                   class="dropdown-item"
@@ -117,6 +119,7 @@
                   [routerLink]="['/leaderboard/teams']"
                 >
                   Teams
+                  <img src="/assets/jersey.png" class="logo" />
                 </li>
               </ul>
             </div>
